--- a/env_update.yml
+++ b/env_update.yml
@@ -17,8 +17,11 @@
       update: true
       source_path: "{{ item.src_svm }}:{{ item.src_volume }}"
       destination_path: "{{ item.dst_svm }}:{{ item.dst_volume }}"
-      <<: *login
       hostname: "{{ item.dst_cluster }}"
+      username: "{{ netapp_username }}"
+      password: "{{ netapp_password }}"
+      https: true
+      validate_certs: false
     loop: "{{ sm_list }}"
     loop_control:
       label: "{{ item.src_svm }}:{{ item.src_volume }} ---> {{ item.dst_svm }}:{{ item.dst_volume }} --- updating"
